--- a/src/app/components/editordemo/edit/editorautoform.component.html
+++ b/src/app/components/editordemo/edit/editorautoform.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <form (ngSubmit)="saveUser()" role="form" class="row" autoform #userForm="ngForm">
+  <form (ngSubmit)="saveUser()" role="form" class="row" autoform #autoForm="ngForm">
     <fieldset>
       <legend>Edit current user</legend>
       <ac-autoform [formGroup]="userForm"></ac-autoform>
