--- a/src/app/components/widgetdemo/widgets/griddemosimple.component.html
+++ b/src/app/components/widgetdemo/widgets/griddemosimple.component.html
@@ -85,13 +85,16 @@ export class UserViewModelList {{ '{' }}
   @Validator.Display('Age', 40, 'From 12 to 88')
   @Validator.Range(12, 88)
   @Validator.TemplateHint('AgeTemplate')
+  @Validator.Sortable(true, (a,b) => -1 : 1)
   age = 0;
 
   @Validator.Display('Done', 100, 'Work progress')
   @Validator.FormatPipe(PercentPipe)
+  @Validator.Sortable(false)
   done?: number = 0;
 
   @Validator.Display('Active', 200, 'User is active')
+  @Validator.Sortable(false)
   active ? = false;
 
 }</pre
@@ -103,6 +106,7 @@ export class UserViewModelList {{ '{' }}
             <li><code>Display</code>: The name of the title (header cell) and tooltip</li>
             <li><code>FormatPipe</code>: A pipe applied to all values before showing</li>
             <li><code>Hidden</code>: The property does not render in the table</li>
+            <li><code>Sortable</code>: Suppress sorting or provide a custom sort function</li>
           </ul>
         </div>
       </div>
