--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
@@ -10,8 +10,11 @@
       </colgroup>
       <thead>
         <tr [ngStyle]="columnStyle ? columnStyle.header : null" >
-          <th *ngFor="let header of model.headers" [title]="header.desc" (click)="header.isSortable ? model.sortColumn(header.prop, null, header.sortCallback) : null">
-            <span class="headerText">{{ header.text }}</span>
+          <th *ngFor="let header of model.headers"
+              [ngClass]="{ 'sortableHeader': header.isSortable }"
+              [title]="header.desc"
+              (click)="header.isSortable ? model.sortColumn(header.prop, null, header.sortCallback) : null">
+            <span class="headerText">{{ header.text }} {{ model.sortColumn | json }} </span>
             <span class="sort" [ngStyle]="columnStyle ? columnStyle.headerButton : null" *ngIf="header.isSortable">
               <button (click)="model.sortColumn(header.prop, directionEnumHelper.Ascending, header.sortCallback)"
                       class="up"
