--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.scss
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.scss
@@ -15,13 +15,17 @@ col.first {
 
 th {
   background: none;
+
+  &.sortableHeader {
+    cursor: pointer;
+  }
+
 }
 
 .headerText {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  width: 90%;
   display: inline-block;
   text-overflow: ellipsis;
 }
