--- a/src/app/components/editordemo/edit/editorform.component.html
+++ b/src/app/components/editordemo/edit/editorform.component.html
@@ -37,7 +37,7 @@
           <ac-editor [formGroup]="userFormGroup" name="phoneNumber"></ac-editor>
           <ac-editor [formGroup]="userFormGroup" name="age"></ac-editor>
           <ac-editor [formGroup]="userFormGroup" name="birthday"></ac-editor>
-          <ac-editor [formGroup]="userFormGroup" name="isAdmin"></ac-editor>
+          <ac-editor [formGroup]="userFormGroup" name="isActive"></ac-editor>
           <ac-editor [formGroup]="userFormGroup" name="passWord"></ac-editor>
           <ac-editor [formGroup]="userFormGroup" name="passWordTwo"></ac-editor>
           <div class="form-group">
