--- a/src/app/components/editordemo/list/list.component.html
+++ b/src/app/components/editordemo/list/list.component.html
@@ -110,8 +110,8 @@
         textEditButton="Edit"
         textDeleteButton="Delete"
         textButtonsHeader="Actions"
-        (onEdit)="editUser($event)"
-        (onDelete)="removeUser($event)"
+        (editItem)="editUser($event)"
+        (deleteItem)="removeUser($event)"
       ></ac-datagrid>
     </div>
     <div class="col-12">
