--- a/src/app/components/editordemo/new/editornew.component.html
+++ b/src/app/components/editordemo/new/editornew.component.html
@@ -50,6 +50,70 @@
      ...
 </pre
           >
+          <p>
+            The component defines the form like this:
+          </p>
+          <pre>
+ngOnInit() {{ '{' }}
+  <span style="color: green">// get validators and error messages from viewmodel type</span>
+  this.userForm = this.formService.build(UserViewModel);
+  <span style="color: green">// register changes</span>
+  this.userForm.valueChanges.subscribe(data => this.onValueChanged(data));
+{{ '}' }}
+          </pre>
+          <p>
+            The model, that drives the form, is defined like this:
+          </p>
+          <pre>
+export class UserViewModel {{ '{' }}
+
+<span style="color: orange">@Hidden()</span>
+  id: number = 0;
+
+  <span style="color: orange">@Display(</span>'E-Mail', 20, 'E-Mail address'<span style="color: orange">)</span>
+  <span style="color: orange">@Required()</span>
+  <span style="color: orange">@MaxLength(</span>100<span style="color: orange">)</span>
+  <span style="color: orange">@Email()</span>
+  email: string = '';
+
+  <span style="color: orange">@Display(</span>'Phone Number', 30, 'The user\'s phone'<span style="color: orange">)</span>
+  <span style="color: orange">@Required()</span>
+  <span style="color: orange">@MaxLength(</span>20<span style="color: orange">)</span>
+  phoneNumber: string = '';
+
+  <span style="color: orange">@Display(</span>'User Name', 10, 'The full name'<span style="color: orange">)</span>
+  <span style="color: orange">@Required(</span>'User Name is required'<span style="color: orange">)</span>
+  <span style="color: orange">@MaxLength(</span>100<span style="color: orange">)</span>
+  userName: string = '';
+
+  <span style="color: orange">@Display(</span>'Age', 40, 'From 12 to 88'<span style="color: orange">)</span>
+  <span style="color: orange">@DisplayGroup(</span>'Personal'<span style="color: orange">)</span>
+  <span style="color: orange">@Range(</span>12, 88<span style="color: orange">)</span>
+  age: number = 24;
+
+  <span style="color: orange">@Display(</span>'Birthday', 50<span style="color: orange">)</span>
+  <span style="color: orange">@DisplayGroup(</span>'Personal'<span style="color: orange">)</span>
+  birthday: Date = new Date();
+
+  <span style="color: orange">@Display(</span>'Is Admin', 60<span style="color: orange">)</span>
+  isAdmin: boolean = true;
+
+  <span style="color: orange">@Display(</span>'Password', 70<span style="color: orange">)</span>
+  <span style="color: orange">@DisplayGroup(</span>'Password'<span style="color: orange">)</span>
+  <span style="color: orange">@Required()</span>
+  <span style="color: orange">@Compare(</span>'passWordTwo'<span style="color: orange">)</span>
+  passWord: string = '';
+
+  <span style="color: orange">@Display(</span>'Password', 80<span style="color: orange">)</span>
+  <span style="color: orange">@DisplayGroup(</span>'Password'<span style="color: orange">)</span>
+  <span style="color: orange">@Required()</span>
+  passWordTwo: string = '';
+
+  <span style="color: orange">@Display(</span>'Done', 100, 'Work progress'<span style="color: orange">)</span>
+  done?: number = 0;
+
+{{ '}' }}
+          </pre>
         </div>
       </div>
     </div>
